# mfmc-framework

./: .gitignore  ADBSat.py  ADBSat_prandtl.py  PICLas.py  PICLas_prandtl.py  README.md  THIRD_PARTY_NOTICES.md  dyn_p.txt  pyproject.toml  requirements.txt
.github/workflows/: test.yml
ADBSat-PyVersion/: data_load.py  mat2vtu.py  simulate.py
ADBSat-PyVersion/atmos_data/: data_load.py
ADBSat-PyVersion/calc/: ADBSatConstants.py  (+20 more)
configs/: README.md
docs/: cluster_deployment.md  field_pod_mfmc.md  mfpod_cluster_runbook.md  tutorial_toy_mock.md
examples/: toy_mock_campaign.yaml
mfmc_campaign/: __init__.py  adapters.py  adbsat_surface_archive.py  adbsat_surface_mapping.py  campaign.py  cli.py  compat.py  config.py  estimator.py  experiments.py  field_pod_mfmc.py  output.py  piclas_surface_archive.py  pilot_correlation.py  plotting.py  qoi_registry.py  registries.py  reproducibility.py  sampling.py  types.py
piclas/: Cube_mesh.h5  DSMC1.ini  F_conv.py  Opt_Sat_mesh.h5  parameter.ini  rename_vtu.sh  test_piclas.sh
scripts/: analyze_mfpod_followon.py  bootstrap_cluster.sh  check_production_runtime.py  configure_piclas.sh  smoke_test.sh
tests/: test_adbsat_payload_integration.py  test_adbsat_surface_mapping.py  test_config_validation.py  test_field_pod_mfmc.py  test_piclas_adapter_attitude.py  test_piclas_qoi_and_environment_consistency.py  test_piclas_reference_area.py  test_piclas_surface_archive.py  test_public_toy_campaign.py  test_sampling_and_estimator.py
update_parameter_file/: ADBSatConstants.py  MPF.txt  dyn_p.txt  parameter.ini  update_parameter.py
(+30 files in other folders)
